<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Orange</string>
    <string name="action_settings">Settings</string>
    <string name="accurate_to_within">Accurate to within </string>
    <string name="feet"> feet</string>
    <string name="meters"> meters</string>
    <string name="finding_location">Finding location…</string>
    <string name="no_time">0.00</string>
    <string name="no_dist">0.00</string>
    <string name="miles">miles</string>
    <string name="kilometers">kilometers</string>
    <string name="pace">pace</string>
    <string name="infinity">&#8734;</string>
    <string name="stopped">Stopped</string>
    <string name="running">Running</string>
    <string name="paused">Paused</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="empty"></string>
    <string name="settings">Settings</string>
    <string name="save">Done</string>
    <string name="activity_name">activity name</string>
    <string name="icon_cogs">&#xf085;</string>
    <string name="icon_play">&#xf04b;</string>
    <string name="icon_pause">&#xf04c;</string>
    <string name="icon_flag">&#xf11e;</string>
    <string name="icon_clock">&#xf017;</string>
    <string name="icon_road">&#xf018;</string>
    <string name="icon_back">&#xf053;</string>
    <string name="icon_trash">&#xf014;</string>
    <string name="icon_upload">&#xf0ee;</string>
    <string name="icon_gps_searching">&#xf14e;</string>
    <string name="icon_gps_locked">&#xf124;</string>
    
    
    <string-array name="activity_types">
        <item>Run</item>
        <item>Walk</item>
    </string-array>

    <color name="white">#fff</color>
    <color name="gray">#aaa</color>

    <string name="title_activity_save">SaveActivity</string>

</resources>
